{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 51,
  "lineage": "a45915df-e0de-e67c-3648-80400ab965d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a432475b999da925",
            "domain": "vpc",
            "id": "eipalloc-0a432475b999da925",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-198-206-157.compute-1.amazonaws.com",
            "public_ip": "44.198.206.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-NGW-IP"
            },
            "tags_all": {
              "Name": "eks-NGW-IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:internet-gateway/igw-0e37ddc90cd929f38",
            "id": "igw-0e37ddc90cd929f38",
            "owner_id": "218920203343",
            "tags": {
              "Name": "eks-IGW"
            },
            "tags_all": {
              "Name": "eks-IGW"
            },
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a432475b999da925",
            "association_id": "eipassoc-04106db9a20a4a434",
            "connectivity_type": "public",
            "id": "nat-026135121a5a39182",
            "network_interface_id": "eni-05b52a2b5de2bd799",
            "private_ip": "10.0.0.122",
            "public_ip": "44.198.206.157",
            "subnet_id": "subnet-0da081020c2337c87",
            "tags": {
              "Name": "eks-NAT"
            },
            "tags_all": {
              "Name": "eks-NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.main-public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ee3c73c100598951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-026135121a5a39182",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ee3c73c10059895",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-rt-private",
            "aws_subnet.main-public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:route-table/rtb-02ee3c73c10059895",
            "id": "rtb-02ee3c73c10059895",
            "owner_id": "218920203343",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-Private-RT"
            },
            "tags_all": {
              "Name": "eks-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:route-table/rtb-08dae518830a4328f",
            "id": "rtb-08dae518830a4328f",
            "owner_id": "218920203343",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e37ddc90cd929f38",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-Main-Public-RT"
            },
            "tags_all": {
              "Name": "eks-Main-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-rta-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ba93e2cb8c16b88",
            "route_table_id": "rtb-02ee3c73c10059895",
            "subnet_id": "subnet-050252bf97096cb6c"
          },
          "dependencies": [
            "aws_route_table.main-rt-private",
            "aws_subnet.main-private",
            "aws_subnet.main-public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9108c8de220718b",
            "route_table_id": "rtb-02ee3c73c10059895",
            "subnet_id": "subnet-00e809c1aafa261bc"
          },
          "dependencies": [
            "aws_route_table.main-rt-private",
            "aws_subnet.main-private",
            "aws_subnet.main-public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-rta-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0348fabe8900acd48",
            "route_table_id": "rtb-08dae518830a4328f",
            "subnet_id": "subnet-0da081020c2337c87"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-rt-public",
            "aws_subnet.main-public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c79a1935c0b96309",
            "route_table_id": "rtb-08dae518830a4328f",
            "subnet_id": "subnet-01d8bb0633a9c88e9"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-rt-public",
            "aws_subnet.main-public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:security-group/sg-019014210b4f9270f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-019014210b4f9270f",
            "ingress": [],
            "name": "eks-ControlPlane-sg",
            "name_prefix": "",
            "owner_id": "218920203343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-ControlPlane-sg"
            },
            "tags_all": {
              "Name": "eks-ControlPlane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:security-group/sg-0c856e1e5b151cd76",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c856e1e5b151cd76",
            "ingress": [],
            "name": "eks-Worker-sg",
            "name_prefix": "",
            "owner_id": "218920203343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-Worker-sg"
            },
            "tags_all": {
              "Name": "eks-Worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:security-group/sg-07912ba40284c8ed9",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-07912ba40284c8ed9",
            "ingress": [],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "218920203343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:security-group/sg-0de55c49ecb0908cf",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de55c49ecb0908cf",
            "ingress": [],
            "name": "eks-node-sg",
            "name_prefix": "",
            "owner_id": "218920203343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-node-sg",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "eks-node-sg",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:security-group/sg-04ca2b9317df0f5b5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04ca2b9317df0f5b5",
            "ingress": [],
            "name": "eks-Public-sg",
            "name_prefix": "",
            "owner_id": "218920203343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-Public-sg"
            },
            "tags_all": {
              "Name": "eks-Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-4168315347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07912ba40284c8ed9",
            "security_group_rule_id": "sgr-0074525d00d103fe9",
            "self": false,
            "source_security_group_id": "sg-0de55c49ecb0908cf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-128234632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07912ba40284c8ed9",
            "security_group_rule_id": "sgr-0ea9be9951b537654",
            "self": false,
            "source_security_group_id": "sg-0de55c49ecb0908cf",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3356544232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-019014210b4f9270f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2999980274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-019014210b4f9270f",
            "security_group_rule_id": "sgr-05d1b69185661e635",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3689164725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c856e1e5b151cd76",
            "security_group_rule_id": "sgr-04992c5f87222250e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1082162334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c856e1e5b151cd76",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1331105998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de55c49ecb0908cf",
            "security_group_rule_id": "sgr-012a07816ca19a618",
            "self": false,
            "source_security_group_id": "sg-07912ba40284c8ed9",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-788961397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c856e1e5b151cd76",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3027247385",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0de55c49ecb0908cf",
            "security_group_rule_id": "sgr-0b90614135ff5b96a",
            "self": false,
            "source_security_group_id": "sg-0de55c49ecb0908cf",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3242644786",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04ca2b9317df0f5b5",
            "security_group_rule_id": "sgr-0e310f7d7ec086913",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2325066313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04ca2b9317df0f5b5",
            "security_group_rule_id": "sgr-00b5bbc0d21f2de8e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3584915038",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04ca2b9317df0f5b5",
            "security_group_rule_id": "sgr-02c22bf21ce57fe8e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:subnet/subnet-050252bf97096cb6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050252bf97096cb6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218920203343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks.private.us-east-1a",
              "kubernetes.io/cluster/eks-cluster-liatrio-nonprod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks.private.us-east-1a",
              "kubernetes.io/cluster/eks-cluster-liatrio-nonprod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "dependencies": [
            "aws_subnet.main-public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:subnet/subnet-00e809c1aafa261bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e809c1aafa261bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218920203343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks.private.us-east-1b",
              "kubernetes.io/cluster/eks-cluster-liatrio-nonprod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks.private.us-east-1b",
              "kubernetes.io/cluster/eks-cluster-liatrio-nonprod": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "dependencies": [
            "aws_subnet.main-public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:subnet/subnet-0da081020c2337c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da081020c2337c87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218920203343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks.public.us-east-1a",
              "kubernetes.io/cluster/eks-cluster-liatrio-nonprod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks.public.us-east-1a",
              "kubernetes.io/cluster/eks-cluster-liatrio-nonprod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:subnet/subnet-01d8bb0633a9c88e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d8bb0633a9c88e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218920203343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks.public.us-east-1b",
              "kubernetes.io/cluster/eks-cluster-liatrio-nonprod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks.public.us-east-1b",
              "kubernetes.io/cluster/eks-cluster-liatrio-nonprod": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0602008663bfe23db"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218920203343:vpc/vpc-0602008663bfe23db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0114e608f8b3da54b",
            "default_route_table_id": "rtb-04b01c3060d73c401",
            "default_security_group_id": "sg-03e8e7092f663227b",
            "dhcp_options_id": "dopt-641b121e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0602008663bfe23db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b01c3060d73c401",
            "owner_id": "218920203343",
            "tags": {
              "Name": "eks-vpc-liatrio-nonprod"
            },
            "tags_all": {
              "Name": "eks-vpc-liatrio-nonprod"
            }
          }
        }
      ]
    }
  ]
}